entity class and minor change

--- a/web/appointment.html
+++ b/web/appointment.html
@@ -89,8 +89,8 @@
                                     </div>
                                      <div class="row">
                                     <div class="input-field col s6">
-                                         <h6>Record Number</h6>
-                                     <input placeholder="enter the Previous record "  type="number" class="validate" name="recordNo"  >
+                                         <h6>Date Of Appointment</h6>
+                                     <input placeholder="enter the Previous record "  type="date" class="validate" name="recordNo"  >
                                   
                                     </div>
                                      </div>
